--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dead Lantern Games</title>
   <link rel="stylesheet" href="style.css"/>
@@ -20,24 +20,16 @@
   </header>
   <section class="hero">
     <h1>Dead Lantern Games</h1>
-    <p>Immersive, psychological horror and gritty shooters. Made by devs who don't play by the rules.</p>
-    <a href="#" class="cta">See Our Work</a>
+    <p>Immersive, psychological horror and gritty shooters. Made by devs who don’t play by the rules.</p>
+    <a href="#games" class="cta">See Our Work</a>
   </section>
-  <section class="games">
+  <section class="games" id="games">
     <h2>Featured Titles</h2>
-    <div class="game-grid">
-      <div class="game-card">
-        <h3>Project Revenant</h3>
-        <p>Tactical survival horror with AI-driven enemies and dynamic sanity systems.</p>
-      </div>
-      <div class="game-card">
-        <h3>Blackroom</h3>
-        <p>First-person psychological shooter. Question everything. Shoot first anyway.</p>
-      </div>
-    </div>
+    <div class="game-grid" id="game-grid"></div>
   </section>
   <footer>
     <p>&copy; 2025 Dead Lantern Games. All rights reserved.</p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
