--- a/index.html
+++ b/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dead Lantern Games</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <div class="logo">DLG</div>
     <nav>
       <ul>
-        <li><a href="#">Games</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#games">Games</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#careers">Careers</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
   <section class="hero">
     <h1>Dead Lantern Games</h1>
-    <p>Immersive, psychological horror and gritty shooters. Made by devs who don’t play by the rules.</p>
+    <p>
+      Immersive, psychological horror and gritty shooters. Made by devs who don’t play by the rules.
+    </p>
     <a href="#games" class="cta">See Our Work</a>
   </section>
   <section class="games" id="games">
     <h2>Featured Titles</h2>
-    <div class="game-grid" id="game-grid"></div>
+    <div class="game-grid" id="game-grid">
+    </div>
+  </section>
+  <section id="about" class="info-section">
+    <h2>About Dead Lantern Games</h2>
+    <p>
+      Founded by passionate devs obsessed with horror and psychological tension, Dead Lantern Games delivers
+      story-driven shooters and survival experiences that challenge the norm and push players to their limits.
+    </p>
+  </section>
+  <section id="careers" class="info-section">
+    <h2>Careers</h2>
+    <p>
+      Interested in joining a cutting-edge indie studio? We're looking for talented artists, programmers, and
+      storytellers who can bring fresh ideas and bold creativity.
+    </p>
+    <a href="#contact" class="cta small">Get in Touch</a>
+  </section>
+  <section id="contact" class="info-section">
+    <h2>Contact</h2>
+    <p>Email us at <a href="mailto:contact@deadlanterngames.com">contact@deadlanterngames.com</a> or use our social channels for quick replies.</p>
   </section>
   <footer>
     <p>&copy; 2025 Dead Lantern Games. All rights reserved.</p>
