--- a/index.html
+++ b/index.html
@@ -7,6 +7,234 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+<style>
+  /* Fonts */
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap');
+
+  /* Reset */
+  *, *::before, *::after {
+    margin: 0; padding: 0; box-sizing: border-box;
+  }
+
+  body {
+    font-family: 'Open Sans', sans-serif;
+    background-color: #0d0d0d;
+    color: #eee;
+    line-height: 1.6;
+    font-size: 16px;
+    scroll-behavior: smooth;
+  }
+
+  /* Container */
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 1.5rem;
+  }
+
+  /* Header */
+  header {
+    position: sticky;
+    top: 0;
+    background: #070707;
+    border-bottom: 1px solid #222;
+    z-index: 1000;
+  }
+
+  .header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.2rem 0;
+  }
+
+  .logo {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 1.8rem;
+    color: #ff003c;
+    letter-spacing: 3px;
+    user-select: none;
+    cursor: default;
+  }
+
+  nav ul {
+    list-style: none;
+    display: flex;
+    gap: 2rem;
+  }
+
+  nav a {
+    text-decoration: none;
+    color: #aaa;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 0.9rem;
+    transition: color 0.3s ease;
+  }
+
+  nav a:hover,
+  nav a:focus {
+    color: #ff003c;
+  }
+
+  /* Hero */
+  .hero {
+    padding: 120px 20px 100px;
+    text-align: center;
+    background: linear-gradient(180deg, #1a1a1a 0%, #0d0d0d 100%);
+  }
+
+  .hero h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 3.8rem;
+    color: #ff003c;
+    letter-spacing: 2px;
+    margin-bottom: 0.5rem;
+  }
+
+  .hero p {
+    font-weight: 600;
+    font-size: 1.2rem;
+    max-width: 650px;
+    margin: 0 auto 2.5rem;
+    color: #aaa;
+  }
+
+  .btn {
+    display: inline-block;
+    background-color: #ff003c;
+    color: #fff;
+    font-weight: 700;
+    padding: 0.85rem 2.5rem;
+    border-radius: 40px;
+    text-decoration: none;
+    font-size: 1.1rem;
+    cursor: pointer;
+    user-select: none;
+    transition: background-color 0.3s ease;
+    border: none;
+  }
+
+  .btn:hover,
+  .btn:focus {
+    background-color: #cc002f;
+  }
+
+  /* Sections */
+  section {
+    padding: 80px 20px;
+  }
+
+  .section-title {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 2.6rem;
+    margin-bottom: 1.8rem;
+    text-align: center;
+    color: #ff003c;
+  }
+
+  .info-section {
+    max-width: 800px;
+    margin: 0 auto 4rem;
+    text-align: center;
+    color: #ddd;
+  }
+
+  .info-section a {
+    color: #ff003c;
+    text-decoration: none;
+    font-weight: 700;
+  }
+
+  .info-section a:hover,
+  .info-section a:focus {
+    text-decoration: underline;
+  }
+
+  /* Games Grid */
+  .game-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 2.5rem;
+    margin-top: 3rem;
+  }
+
+  .game-card {
+    background-color: #1e1e1e;
+    border-radius: 12px;
+    padding: 1rem 1rem 1.5rem;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.5);
+    display: flex;
+    flex-direction: column;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+  }
+
+  .game-card:hover,
+  .game-card:focus-within {
+    transform: translateY(-8px);
+    box-shadow: 0 10px 25px rgba(255, 0, 60, 0.7);
+  }
+
+  .game-card img {
+    width: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+    margin-bottom: 1rem;
+    user-select: none;
+  }
+  .game-card h3 {
+    color: #fff;
+    font-weight: 800;
+    margin-bottom: 0.4rem;
+    font-size: 1.25rem;
+  }
+  .game-card p {
+    color: #aaa;
+    font-size: 0.95rem;
+    flex-grow: 1;
+    margin-bottom: 1rem;
+  }
+  .btn-small {
+    font-size: 0.9rem;
+    padding: 0.5rem 1.5rem;
+    border-radius: 30px;
+    align-self: flex-start;
+    background-color: #ff003c;
+    border: none;
+    color: #fff;
+    font-weight: 700;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+  }
+  .btn-small:hover,
+  .btn-small:focus {
+    background-color: #cc002f;
+  }
+  /* Footer */
+  footer {
+    background-color: #121212;
+    padding: 2.5rem 20px;
+    text-align: center;
+    color: #666;
+    font-size: 0.9rem;
+  }
+  /* Responsive */
+  @media (max-width: 768px) {
+    .hero h1 {
+      font-size: 2.8rem;
+    }
+    .section-title {
+      font-size: 2.2rem;
+    }
+    nav ul {
+      gap: 1rem;
+    }
+  }
+</style>
   <header>
     <div class="logo">DLG</div>
     <nav>
