--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <style>
-  /* Fonts */
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap');
+  /* Google Fonts */
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Roboto&display=swap');
 
   /* Reset */
   *, *::before, *::after {
@@ -17,221 +17,275 @@
   }
 
   body {
-    font-family: 'Open Sans', sans-serif;
-    background-color: #0d0d0d;
-    color: #eee;
-    line-height: 1.6;
+    font-family: 'Roboto', sans-serif;
+    background: #121217;
+    color: #e1e1e6;
     font-size: 16px;
-    scroll-behavior: smooth;
+    line-height: 1.6;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 
-  /* Container */
   .container {
-    max-width: 1200px;
+    max-width: 1140px;
     margin: 0 auto;
     padding: 0 1.5rem;
   }
 
-  /* Header */
+  /* HEADER */
   header {
     position: sticky;
     top: 0;
-    background: #070707;
-    border-bottom: 1px solid #222;
-    z-index: 1000;
+    background: #1a1a24;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.7);
+    z-index: 999;
   }
 
   .header-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.2rem 0;
+    height: 70px;
+    max-width: 1140px;
+    margin: 0 auto;
+    padding: 0 1.5rem;
   }
 
   .logo {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    font-size: 1.8rem;
-    color: #ff003c;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 1.9rem;
+    color: #fa3e3e; /* classy red */
     letter-spacing: 3px;
     user-select: none;
     cursor: default;
+    text-transform: uppercase;
+    transition: color 0.3s ease;
+  }
+  .logo:hover {
+    color: #ff5c5c;
   }
 
   nav ul {
     list-style: none;
     display: flex;
-    gap: 2rem;
+    gap: 2.5rem;
   }
 
   nav a {
     text-decoration: none;
-    color: #aaa;
+    color: #c1c1c9;
     font-weight: 600;
+    font-size: 0.95rem;
     text-transform: uppercase;
-    font-size: 0.9rem;
+    letter-spacing: 1px;
+    padding: 0.4rem 0;
+    position: relative;
     transition: color 0.3s ease;
   }
-
+  nav a::after {
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background: #fa3e3e;
+    transition: width 0.3s ease;
+  }
   nav a:hover,
   nav a:focus {
-    color: #ff003c;
+    color: #fa3e3e;
+  }
+  nav a:hover::after,
+  nav a:focus::after {
+    width: 100%;
   }
 
-  /* Hero */
+  /* HERO SECTION */
   .hero {
-    padding: 120px 20px 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 90vh;
+    background: linear-gradient(135deg, #1f1f29 40%, #0d0d11 100%);
     text-align: center;
-    background: linear-gradient(180deg, #1a1a1a 0%, #0d0d0d 100%);
+    padding: 0 1.5rem;
   }
-
   .hero h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    font-size: 3.8rem;
-    color: #ff003c;
-    letter-spacing: 2px;
-    margin-bottom: 0.5rem;
-  }
-
-  .hero p {
-    font-weight: 600;
-    font-size: 1.2rem;
-    max-width: 650px;
-    margin: 0 auto 2.5rem;
-    color: #aaa;
-  }
-
-  .btn {
-    display: inline-block;
-    background-color: #ff003c;
-    color: #fff;
+    font-family: 'Poppins', sans-serif;
     font-weight: 700;
-    padding: 0.85rem 2.5rem;
-    border-radius: 40px;
-    text-decoration: none;
-    font-size: 1.1rem;
-    cursor: pointer;
-    user-select: none;
-    transition: background-color 0.3s ease;
-    border: none;
+    font-size: 4.5rem;
+    color: #fa3e3e;
+    letter-spacing: 3px;
+    margin-bottom: 1rem;
+    text-shadow: 0 0 12px rgba(250,62,62,0.6);
   }
-
+  .hero p {
+    max-width: 720px;
+    margin: 0 auto 3rem;
+    color: #b0b0b7;
+    font-weight: 500;
+    font-size: 1.3rem;
+    line-height: 1.5;
+  }
+  .btn {
+    background: linear-gradient(135deg, #fa3e3e, #c92e2e);
+    border: none;
+    border-radius: 40px;
+    color: white;
+    font-weight: 700;
+    padding: 0.85rem 3rem;
+    font-size: 1.2rem;
+    cursor: pointer;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    box-shadow: 0 8px 20px rgba(250,62,62,0.5);
+    transition: box-shadow 0.3s ease, background 0.3s ease;
+    user-select: none;
+    align-self: center;
+    text-decoration: none;
+  }
   .btn:hover,
   .btn:focus {
-    background-color: #cc002f;
+    background: linear-gradient(135deg, #c92e2e, #fa3e3e);
+    box-shadow: 0 12px 30px rgba(255, 50, 50, 0.7);
   }
 
-  /* Sections */
+  /* SECTIONS */
   section {
-    padding: 80px 20px;
+    padding: 6rem 0;
   }
-
   .section-title {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    font-size: 2.6rem;
-    margin-bottom: 1.8rem;
-    text-align: center;
-    color: #ff003c;
-  }
-
-  .info-section {
-    max-width: 800px;
-    margin: 0 auto 4rem;
-    text-align: center;
-    color: #ddd;
-  }
-
-  .info-section a {
-    color: #ff003c;
-    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
     font-weight: 700;
+    font-size: 2.8rem;
+    margin-bottom: 3rem;
+    text-align: center;
+    color: #fa3e3e;
   }
-
+  .info-section {
+    max-width: 760px;
+    margin: 0 auto;
+    font-weight: 500;
+    font-size: 1.05rem;
+    color: #c7c7cd;
+    line-height: 1.7;
+    text-align: center;
+  }
+  .info-section a {
+    color: #fa3e3e;
+    font-weight: 600;
+    text-decoration: none;
+    border-bottom: 1.5px solid transparent;
+    transition: border-color 0.3s ease;
+  }
   .info-section a:hover,
   .info-section a:focus {
-    text-decoration: underline;
+    border-color: #fa3e3e;
   }
 
-  /* Games Grid */
+  /* GAMES GRID */
   .game-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 2.5rem;
-    margin-top: 3rem;
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+    gap: 2.8rem;
+    max-width: 1140px;
+    margin: 0 auto;
   }
 
   .game-card {
-    background-color: #1e1e1e;
-    border-radius: 12px;
-    padding: 1rem 1rem 1.5rem;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.5);
+    background: #21212b;
+    border-radius: 16px;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.5);
+    overflow: hidden;
     display: flex;
     flex-direction: column;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
     cursor: pointer;
+    transition: transform 0.35s ease, box-shadow 0.35s ease;
   }
-
   .game-card:hover,
   .game-card:focus-within {
-    transform: translateY(-8px);
-    box-shadow: 0 10px 25px rgba(255, 0, 60, 0.7);
+    transform: translateY(-12px);
+    box-shadow: 0 16px 35px rgba(250, 62, 62, 0.7);
   }
 
   .game-card img {
     width: 100%;
-    border-radius: 10px;
+    height: 180px;
     object-fit: cover;
-    margin-bottom: 1rem;
     user-select: none;
+    transition: transform 0.4s ease;
   }
-  .game-card h3 {
-    color: #fff;
-    font-weight: 800;
-    margin-bottom: 0.4rem;
-    font-size: 1.25rem;
+  .game-card:hover img {
+    transform: scale(1.05);
   }
-  .game-card p {
-    color: #aaa;
-    font-size: 0.95rem;
+
+  .game-content {
+    padding: 1.6rem 1.5rem 2rem;
     flex-grow: 1;
-    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
   }
+
+  .game-title {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 1.4rem;
+    color: #f2f2f7;
+    margin-bottom: 0.6rem;
+  }
+
+  .game-desc {
+    font-size: 1rem;
+    color: #a0a0a8;
+    flex-grow: 1;
+    margin-bottom: 1.2rem;
+    line-height: 1.4;
+  }
+
   .btn-small {
-    font-size: 0.9rem;
-    padding: 0.5rem 1.5rem;
-    border-radius: 30px;
     align-self: flex-start;
-    background-color: #ff003c;
+    background: #fa3e3e;
     border: none;
+    border-radius: 30px;
     color: #fff;
     font-weight: 700;
+    padding: 0.5rem 1.6rem;
+    font-size: 0.95rem;
+    cursor: pointer;
+    user-select: none;
     text-decoration: none;
-    transition: background-color 0.3s ease;
+    transition: background 0.3s ease;
   }
   .btn-small:hover,
   .btn-small:focus {
-    background-color: #cc002f;
+    background: #c92e2e;
   }
-  /* Footer */
+
+  /* FOOTER */
   footer {
-    background-color: #121212;
-    padding: 2.5rem 20px;
-    text-align: center;
-    color: #666;
+    background: #1a1a24;
+    color: #66676d;
     font-size: 0.9rem;
+    text-align: center;
+    padding: 2rem 1.5rem;
+    user-select: none;
   }
-  /* Responsive */
+
+  /* RESPONSIVE */
   @media (max-width: 768px) {
     .hero h1 {
-      font-size: 2.8rem;
+      font-size: 3rem;
     }
     .section-title {
       font-size: 2.2rem;
     }
     nav ul {
-      gap: 1rem;
+      gap: 1.5rem;
+    }
+    .game-card img {
+      height: 140px;
     }
   }
 </style>
