--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dead Lantern Games</title>
+  <meta name="referrer" content="no-referrer" />
+  <link rel="icon" type="image/x-icon" href="logo.png" />
+  <title>Dead Lantern Games ^_^</title>
+  <meta name ="description" content="Indie studio, professional quality, we don't respect AAA. 💕">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
