--- a/index.html
+++ b/index.html
@@ -337,6 +337,6 @@
   <footer>
     <p>&copy; 2025 Dead Lantern Games. All rights reserved.</p>
   </footer>
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
