--- a/index.html
+++ b/index.html
@@ -330,6 +330,18 @@
     </p>
     <a href="#contact" class="cta small">Get in Touch</a>
   </section>
+  <section id="about-dlg" class="studio-about">
+  <div class="container">
+    <h2>About Dead Lantern Games</h2>
+    <p><strong>Dead Lantern Games</strong> is <strong>Bloodware’s</strong> hardcore indie studio, crafting mature, adult-focused horror and shooter games that don’t hold back.</p>
+
+    <p>We specialize in immersive, spine-tingling horror worlds filled with psychological tension and unsettling atmospheres — plus adrenaline-fueled shooters with deep stories and intense gameplay.</p>
+
+    <p>DLG blends gripping narratives with innovative mechanics to deliver dark, thought-provoking experiences made for players who crave something deeper than mainstream games. No fluff, no filters — just raw, unforgettable storytelling.</p>
+
+    <p>Backed by Bloodware, we’ve got the freedom and firepower to push boundaries, challenge conventions, and create bold, high-quality titles that leave a mark.</p>
+  </div>
+  </section>
   <section id="contact" class="info-section">
     <h2>Contact</h2>
     <p>Email us at <a href="mailto:contact@deadlanterngames.com">contact@deadlanterngames.com</a> or use our social channels for quick replies.</p>
