--- a/index.html
+++ b/index.html
@@ -316,11 +316,19 @@
     </div>
   </section>
   <section id="about" class="info-section">
-    <h2>About Dead Lantern Games</h2>
-    <p>
-      Founded by passionate devs obsessed with horror and psychological tension, Dead Lantern Games delivers
-      story-driven shooters and survival experiences that challenge the norm and push players to their limits.
-    </p>
+  <h2>About Dead Lantern Games</h2>
+  <p>
+    Dead Lantern Games is a bold indie studio creating mature, story-driven horror and shooter experiences that push players to their limits.
+  </p>
+  <p>
+    We specialize in immersive horror worlds full of psychological tension and dread, and fast-paced shooters that combine adrenaline with rich narrative.
+  </p>
+  <p>
+    Our games explore the darker sides of storytelling and gameplay — gripping, intense, and designed for players who want something deeper than the usual.
+  </p>
+  <p>
+    Whether you're surviving a nightmare or fighting through a dystopia, Dead Lantern Games makes sure it sticks with you long after the credits roll.
+  </p>
   </section>
   <section id="careers" class="info-section">
     <h2>Careers</h2>
@@ -329,18 +337,6 @@
       storytellers who can bring fresh ideas and bold creativity.
     </p>
     <a href="#contact" class="cta small">Get in Touch</a>
-  </section>
-  <section id="about-dlg" class="studio-about">
-  <div class="container">
-    <h2>About Dead Lantern Games</h2>
-    <p><strong>Dead Lantern Games</strong> is <strong>Bloodware’s</strong> hardcore indie studio, crafting mature, adult-focused horror and shooter games that don’t hold back.</p>
-
-    <p>We specialize in immersive, spine-tingling horror worlds filled with psychological tension and unsettling atmospheres — plus adrenaline-fueled shooters with deep stories and intense gameplay.</p>
-
-    <p>DLG blends gripping narratives with innovative mechanics to deliver dark, thought-provoking experiences made for players who crave something deeper than mainstream games. No fluff, no filters — just raw, unforgettable storytelling.</p>
-
-    <p>Backed by Bloodware, we’ve got the freedom and firepower to push boundaries, challenge conventions, and create bold, high-quality titles that leave a mark.</p>
-  </div>
   </section>
   <section id="contact" class="info-section">
     <h2>Contact</h2>
