--- a/index.html
+++ b/index.html
@@ -342,6 +342,13 @@
     <h2>Contact</h2>
     <p>Email us at <a href="mailto:contact@deadlanterngames.com">contact@deadlanterngames.com</a> or use our social channels for quick replies.</p>
   </section>
+  <section id="follow-us" class="info-section">
+  <h2>Follow Dead Lantern Games</h2>
+  <ul class="social-links">
+    <li><a href="https://www.youtube.com/@DeadLanternGames" target="_blank" rel="noopener noreferrer">YouTube</a></li>
+    <li><a href="https://x.com/@DeadLantrnGames" target="_blank" rel="noopener noreferrer">X (Twitter)</a></li>
+  </ul>
+  </section>
   <footer>
     <p>&copy; 2025 Dead Lantern Games. All rights reserved.</p>
   </footer>
